# Scalar-Openev

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  openev.yaml  pyproject.toml
.github/workflows/: sync-to-hf.yml
server/: Dockerfile  __init__.py  app.py  environment.py
