[project]
name = "supportops-openenv"
version = "1.0.0"
description = "OpenEnv-compatible real-world support ticket triage environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"fastapi>=0.110.0",
	"httpx>=0.27.0",
	"openai>=1.40.0",
	"pydantic>=2.7.0",
	"python-dotenv>=1.0.1",
	"uvicorn>=0.29.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"
